# Kenate

./: .gitignore  CMakeLists.txt  KENATE_MANUAL.md  LICENSE  README.md  TODO.md  test_bindings.py
examples/: patrol_robot.py  simple_loop.cpp
include/kenate/: BaseState.hpp  Engine.hpp
include/kenate/hal/: MockMotor.hpp  MotorInterface.hpp
python/: bindings.cpp  kenate.py
